modified-publication info

--- a/publications.html
+++ b/publications.html
@@ -75,7 +75,7 @@
           <!-- 1st conference -->
           <article>
             <h2 class="c_pub-title">
-              <a class="c_link-pub" href="https://journals.ametsoc.org/doi/abs/10.1175/WCAS-D-19-0011.1">
+              <a class="c_link-pub" href="https://ams.confex.com/ams/34HURR/meetingapp.cgi/Paper/373385">
                 Graphical Hurricane Risk Communication for Vulnerable Populations
               </a>
             </h2>
@@ -84,9 +84,8 @@
               hurricane risks and potential threats. Results of these activities will be presented at the conference.
             </p>
             <p class="c_pub-reference">
-              Majumdar, S. J., B. Millet, K. Broad, A. Cairo, S. Evans, B. McNoldy. (2020, 13-16 January). <em>Graphical Hurricane Risk Communication for Vulnerable Populations</em>
-              [Paper presentation]. 15th Symposium on Societal Applications: Policy, Research, and Practice. American Meteorological Society Annual Meeting,  Boston, MA, United States.
-            </p>
+              Majumdar, S. J., B. Millet, K. Broad, A. Cairo, S. Evans, B. McNoldy. (2020, May 10-15). <em>Graphical Hurricane Risk Communication for Vulnerable Populations</em>
+              [Paper presentation]. 34th American Meteorological Society Conference on Hurricanes and Tropical Meteorology. New Orleans, LA, United States.
           </article>
           <!-- 2nd conference -->
           <article>
@@ -101,8 +100,9 @@
               activities will be presented, together with ongoing and future efforts targeted at impact-based graphical design.
             </p>
             <p class="c_pub-reference">
-              Majumdar, S. J., B. Millet, K. Broad, A. Cairo and S. Evans. (2020, May 10-15). <em>Improving Hurricane Risk Communication for Vulnerable Populations</em>
-              [Paper presentation]. 34th American Meteorological Society Conference on Hurricanes and Tropical Meteorology. New Orleans, LA, United States.
+              Majumdar, S. J., B. Millet, K. Broad, A. Cairo and S. Evans. (2020, January 13-16). <em>Improving Hurricane Risk Communication for Vulnerable Populations</em>
+              [Paper presentation]. 15th Symposium on Societal Applications: Policy, Research, and Practice. American Meteorological Society Annual Meeting,  Boston, MA, United States.
+            </p>
             </p>
           </article>
       </section>
