--- a/publications.html
+++ b/publications.html
@@ -84,8 +84,9 @@
               hurricane risks and potential threats. Results of these activities will be presented at the conference.
             </p>
             <p class="c_pub-reference">
-              Majumdar, S. J., B. Millet, K. Broad, A. Cairo, S. Evans, B. McNoldy. (2020, May 10-15). <em>Graphical Hurricane Risk Communication for Vulnerable Populations</em>
-              [Paper presentation]. 34th American Meteorological Society Conference on Hurricanes and Tropical Meteorology. New Orleans, LA, United States.
+              Majumdar, S. J., B. Millet, K. Broad, A. Cairo, S. Evans and B. D. McNoldy, 2020:
+              "Graphical Hurricane Risk Communication for Vulnerable Populations”.  34th Conference on Hurricanes
+              and Tropical Meteorology, American Meteorological Society, New Orleans, LA, May 10-15, 2020.
           </article>
           <!-- 2nd conference -->
           <article>
@@ -100,9 +101,8 @@
               activities will be presented, together with ongoing and future efforts targeted at impact-based graphical design.
             </p>
             <p class="c_pub-reference">
-              Majumdar, S. J., B. Millet, K. Broad, A. Cairo and S. Evans. (2020, January 13-16). <em>Improving Hurricane Risk Communication for Vulnerable Populations</em>
-              [Paper presentation]. 15th Symposium on Societal Applications: Policy, Research, and Practice. American Meteorological Society Annual Meeting,  Boston, MA, United States.
-            </p>
+              Majumdar, S. J., B. Millet, K. Broad, A. Cairo, S. Evans and B. D. McNoldy, 2020: “Improving Hurricane Risk Communication for Vulnerable Populations”. Workshop on
+              Tropical Cyclones After Landfall: Impacts, Predictability and Forecasting, National Weather Center, Norman, OK, April 14-16, 2020.
             </p>
           </article>
       </section>
