--- a/team.html
+++ b/team.html
@@ -185,7 +185,7 @@
             <article class="c_article_team-member c_article_team-student">
               <img class="c_img_team-member" alt="Morgan Asmussen's headshot" src="assets/morgan.jpg"></img>
               <h2>Morgan Asmussen</h2>
-              <h3>ROSENSTIEL SCHOOL OF MARINE AND ATMOSPHERIC SCIENCE</h3>
+              <h3>UNDERGRADUATE STUDENT<br>ROSENSTIEL SCHOOL OF MARINE AND ATMOSPHERIC SCIENCE</h3>
             </article>
             <article class="c_article_team-member c_article_team-student">
               <img class="c_img_team-member" alt="AJ's headshot" src="assets/profile-placeholder.png"></img>
