Updated content of Publications

--- a/publications.html
+++ b/publications.html
@@ -49,8 +49,9 @@
               </a>
             </h2>
             <p>
-              This paper is a cross-disciplinary and critical review of those efforts as they are
-              relevant to hurricane risk communication development.
+              This paper is a cross-disciplinary and critical review of hurricane risk communication development, focused on  1) research concerning visual communications and
+              the way in which individuals process, understand, and make decisions regarding them and 2) the way in which vulnerable communities understand and interact with
+              hurricane warning communications.
             </p>
             <p class="c_pub-reference">
               Millet, B., Carter, A. P., Broad, K., Cairo, A., Evans, S. D., & Majumdar, S. J. (2020). Hurricane Risk Communication:
@@ -65,7 +66,8 @@
               </a>
             </h2>
             <p>
-              This paper [missing short description].
+              Reading a visualization is often an experience mediated by people other than designers themselves. This article explains the role of
+              mediators such as journalists and scientists."
             </p>
             <p class="c_pub-reference">
               Cairo, A. (2020). If Anything on This Graphic Causes Confusion, Discard the Entire Product.
@@ -80,8 +82,8 @@
               </a>
             </h2>
             <p>
-              The Hurakan team conducted activities including literature review, focus groups, surveys, and lab experiments to address challenges in visually communicating
-              hurricane risks and potential threats. Results of these activities will be presented at the conference.
+              This talk describes research activities conducted by the Hurakan team including literature review, focus groups, surveys, and lab experiments to address challenges in
+              visually communicating hurricane risks and potential threats.
             </p>
             <p class="c_pub-reference">
               Majumdar, S. J., B. Millet, K. Broad, A. Cairo, S. Evans and B. D. McNoldy, 2020:
@@ -96,9 +98,7 @@
               </a>
             </h2>
             <p>
-              This research focused on the National Hurricane Center’s “Cone of Uncertainty”. Findings include frequent misinterpretation of the cone graphics, and the stated
-              interest by participants in receiving clear information that would help them make informed decisions about what to do and when. Results and conclusions from these
-              activities will be presented, together with ongoing and future efforts targeted at impact-based graphical design.
+              This talk describes findings from our research about misinterpretations when using the National Hurricane Center’s “Cone of Uncertainty” graphic.
             </p>
             <p class="c_pub-reference">
               Majumdar, S. J., B. Millet, K. Broad, A. Cairo, S. Evans and B. D. McNoldy, 2020: “Improving Hurricane Risk Communication for Vulnerable Populations”. Workshop on
