Updated content for Press

--- a/press.html
+++ b/press.html
@@ -66,7 +66,9 @@
                 Huracán Dorian: ¿qué nos dice exactamente el cono que predice el paso de un ciclón y por qué tanta gente lo malinterpreta?
               </a>
             </h2>
-            <p>[MISSING]</p>
+            <p>“They say a picture is worth a thousand words. But it's not always like this.” The cone of uncertainty, a popular storm prediction map
+              produced by NHC which demonstrates different storm data, is often misinterpreted by many members of the public. The Hurakan group found that  40% of people do not feel threatened if they live outside the cone.
+              The article explains what the map is and what causes the confusion.</p>
           </div>
         </article>
 
@@ -113,7 +115,7 @@
                 Those Hurricane Maps Don’t Mean What You Think They Mean
               </a>
             </h2>
-            <p>We use hurricane forecasts to warn people. Why do we misinterpret them so often?</p>
+            <p>Through the infographic, the author talks about common misinterpretations about the National Hurricane Center’s map, how the map is designed, as well as why it needs to be read closely and carefully.</p>
           </div>
         </article>
 
