--- a/press.html
+++ b/press.html
@@ -63,11 +63,11 @@
           <div>
             <h2 class="c_press_title">
               <a href="https://www.bbc.com/mundo/noticias-49532705" class="c_link-pub">
-                Huracán Dorian: ¿qué nos dice exactamente el cono que predice el paso de un ciclón y por qué tanta gente lo malinterpreta?
+                Hurricane Dorian: What exactly does the cone that predicts the passage of a cyclone tell us and why do so many people misinterpret it?
               </a>
             </h2>
             <p>“They say a picture is worth a thousand words. But it's not always like this.” The cone of uncertainty, a popular storm prediction map
-              produced by NHC which demonstrates different storm data, is often misinterpreted by many members of the public. The Hurakan group found that  40% of people do not feel threatened if they live outside the cone.
+              produced by NHC which demonstrates different storm data, is often misinterpreted by many members of the public. The Hurakan group found that 40% of people do not feel threatened if they live outside the cone.
               The article explains what the map is and what causes the confusion.</p>
           </div>
         </article>
@@ -89,7 +89,7 @@
               <a href="https://soundcloud.com/wlrn/544pm-um-professor-says-youre-reading-those-hurricane-maps-wrong" class="c_link-pub">
                 UM Professor says you're reading those hurricane maps wrong</a>
               </h2>
-            <p>Our faculty Alberto Cairo talked about why the hurricane map does not really mean what the audience thinks it means.</p>
+            <p>Our investigator Alberto Cairo explains why the hurricane map does not really mean what the audience thinks it means.</p>
             <p class="c_press-link">
 
             </p>
@@ -115,7 +115,7 @@
                 Those Hurricane Maps Don’t Mean What You Think They Mean
               </a>
             </h2>
-            <p>Through the infographic, the author talks about common misinterpretations about the National Hurricane Center’s map, how the map is designed, as well as why it needs to be read closely and carefully.</p>
+            <p>Through the infographic, our investigator talks about common misinterpretations about the National Hurricane Center’s map, how the map is designed, as well as why it needs to be read closely and carefully.</p>
           </div>
         </article>
 
