--- a/publications.html
+++ b/publications.html
@@ -67,7 +67,7 @@
             </h2>
             <p>
               Reading a visualization is often an experience mediated by people other than designers themselves. This article explains the role of
-              mediators such as journalists and scientists."
+              mediators such as journalists and scientists.
             </p>
             <p class="c_pub-reference">
               Cairo, A. (2020). If Anything on This Graphic Causes Confusion, Discard the Entire Product.
