--- a/team.html
+++ b/team.html
@@ -30,8 +30,7 @@
         <p>
           Drawing from several fields, including meteorology, environmental anthropology, decision sciences, community engagement,
           data visualization, human factors, and natural hazards research, our interdisciplinary team is focused on improving interpretations of
-          hurricane forecast products among different user groups, in particular vulnerable populations in South Florida. Five faculty members,
-          two research associates and three graduate students are on our team.
+          hurricane forecast products among different user groups, in particular vulnerable populations in South Florida.
         </p>
       </article>
     </section>
@@ -188,8 +187,8 @@
               <h3>UNDERGRADUATE STUDENT<br>ROSENSTIEL SCHOOL OF MARINE AND ATMOSPHERIC SCIENCE</h3>
             </article>
             <article class="c_article_team-member c_article_team-student">
-              <img class="c_img_team-member" alt="AJ's headshot" src="assets/profile-placeholder.png"></img>
-              <h2>AJ</h2>
+              <img class="c_img_team-member" alt="AJ's headshot" src="assets/AJ.jpg"></img>
+              <h2>Alexander James Hudson</h2>
               <h3></h3>
             </article>
           </section>
