Updated team members' profiles.

--- a/team.html
+++ b/team.html
@@ -179,17 +179,17 @@
             <article class="c_article_team-member c_article_team-student">
               <img class="c_img_team-member" alt="Barbara Millet's headshot" src="assets/leigh.png"></img>
               <h2>Leigh Rauk</h2>
-              <h3>GRADUATE RESEARCH ASSISTANT<br>PHD CANDIDATE SCHOOL OF EDUCATION</h3>
+              <h3>GRADUATE RESEARCH ASSISTANT<br>PHD CANDIDATE<br>SCHOOL OF EDUCATION</h3>
+            </article>
+            <article class="c_article_team-member c_article_team-student">
+              <img class="c_img_team-member" alt="AJ's headshot" src="assets/AJ.jpg"></img>
+              <h2>Alexzander James Hudson</h2>
+              <h3>GRADUATE RESEARCH ASSISTANT<br>PHD STUDENT<br>ABESS CENTER</h3>
             </article>
             <article class="c_article_team-member c_article_team-student">
               <img class="c_img_team-member" alt="Morgan Asmussen's headshot" src="assets/morgan.jpg"></img>
               <h2>Morgan Asmussen</h2>
               <h3>UNDERGRADUATE STUDENT<br>ROSENSTIEL SCHOOL OF MARINE AND ATMOSPHERIC SCIENCE</h3>
-            </article>
-            <article class="c_article_team-member c_article_team-student">
-              <img class="c_img_team-member" alt="AJ's headshot" src="assets/AJ.jpg"></img>
-              <h2>Alexander James Hudson</h2>
-              <h3></h3>
             </article>
           </section>
 
