Updated team and press list

--- a/publications.html
+++ b/publications.html
@@ -74,7 +74,55 @@
               <em>IEEE Computer Graphics and Applications</em>, 40(2), 91–97.
             </p>
           </article>
-          <!-- 1st conference -->
+          <!-- conference -->
+          <article>
+            <h2 class="c_pub-title">
+              <a class="c_link-pub" href="https://virtual.ieeevis.org/paper_w-comm-1028.html">
+                Analyzing Dorian Twitter data to understand how hurricane risk communication changes as threats unfold
+              </a>
+            </h2>
+            <p>
+              This research explores diffusion of forecast messages on social media for Hurricane Dorian (2019) to understand how hurricane risk information is created, disseminated, and discussed in many-to-many
+              communication modes. We collected streams of posts from professional Twitter accounts, conducted a descriptive statistical analysis of manually-coded tweets to identify hurricane risk message types,
+              performed a network analysis to audit engagement among different types of accounts, and calculated sentiment scores to examine message opinions.
+            </p>
+            <p class="c_pub-reference">
+              Ma, Q., & Millet, B. (2020). Analyzing Dorian Twitter data to understand how hurricane risk communication changes as threats unfold.
+              <em>IEEE Visualization for Communication Workshop.</em> Online. October 25-26, 2020.
+          </article>
+          <!-- conference -->
+          <article>
+            <h2 class="c_pub-title">
+              <a class="c_link-pub" href="https://virtual.ieeevis.org/paper_w-comm-1023.html">
+                Beautiful Visualizations Slain by Ugly Facts: Redesigning the National Hurricane Center’s ‘Cone of Uncertainty’ Map
+              </a>
+            </h2>
+            <p>
+              The Track Forecast Cone, commonly known as the “cone of uncertainty”, is the most popular hurricane and tropical storm forecast product that the
+              National Hurricane Center produces. However, it is often misinterpreted by non-experts. In this study we first explored the most common misconceptions
+              about the cone and produced two alternative redesigns that we expected to be more attractive to and easier to understand by non-expert readers. Our results were mixed,
+              but reveal promising paths for future efforts.
+            </p>
+            <p class="c_pub-reference">
+              Millet, B., Cairo, A., Majumdar, S., *Diaz, C., Evans, S., & Broad, K. (2020). Beautiful Visualizations Slain by Ugly Facts: Redesigning the National Hurricane Center’s ‘Cone of Uncertainty’ Map.
+              <em>IEEE Visualization for Communication Workshop.</em> Online. October 25-26, 2020.
+          </article>
+          <!-- conference -->
+          <article>
+            <h2 class="c_pub-title">
+              <a>
+                Visualizing Uncertainty in Weather Forecast
+              </a>
+            </h2>
+            <p>
+              This systematic review investigates design attributes that influence the expression of uncertainty visualization in weather forecasts, revealing six categories of design
+              features that can inform how viewers interpret the uncertainty conveyed in weather forecast displays. These design features also provide us with an initial basis for developing guidelines.
+            </p>
+            <p class="c_pub-reference">
+              Ding, Q., and Millet, B. (2020). Visualizing Uncertainty in Weather Forecasts. <em>Proceedings of the Human Factors and Ergonomics Society Annual Meeting,</em>
+              Chicago, IL, October 5-9, 2020.
+          </article>
+          <!-- conference -->
           <article>
             <h2 class="c_pub-title">
               <a class="c_link-pub" href="https://ams.confex.com/ams/34HURR/meetingapp.cgi/Paper/373385">
@@ -90,7 +138,7 @@
               "Graphical Hurricane Risk Communication for Vulnerable Populations”.  34th Conference on Hurricanes
               and Tropical Meteorology, American Meteorological Society, New Orleans, LA, May 10-15, 2020.
           </article>
-          <!-- 2nd conference -->
+          <!--conference -->
           <article>
             <h2 class="c_pub-title">
               <a class="c_link-pub" href="https://ams.confex.com/ams/2020Annual/meetingapp.cgi/Paper/365581">
