--- a/team.html
+++ b/team.html
@@ -67,6 +67,7 @@
               &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
               &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
             </p>
+            <br>
           </div>
           <div>
             <div class="c_team-member-contact">
@@ -138,27 +139,23 @@
             </article>
 
             <!-- Research Asociates-->
-            <article class="c_article_team-member-assoicates">
-              <img class="c_img_team-member c_img_team-member-associates" alt="Andrew Carter's headshot" src="assets/carter.jpg"></img>
-              <h2>Andrew Carter, PhD</h2>
-              <h3>ENVIRONMENT AND LAW</h3>
-              <div class="c_div_team-member-intro c_div_team-member-intro-long">
-                <p>Andrew Carter, PhD is a research associate whose areas of research include resilience and sustainability, environmental law, environmental justice,
-                  environmental history, and theoretical approaches to policy analysis.
-                </p>
-              </div>
-              <div class="c_team-member-contact-associates">
-                <a href="mailto:a.carter4@umiami.edu" class="c_team-icon-mail"></a>
-              </div>
-
-              <img class="c_img_team-member c_img_team-member-associates-next" alt="Brian McNoldy's headshot" src="assets/mcnoldy.jpg"></img>
+            <article class="c_article_team-member">
+              <img class="c_img_team-member" alt="Brian McNoldy's headshot" src="assets/mcnoldy.jpg"></img>
               <h2>Brian McNoldy, Senior Research Associate</h2>
               <h3>WEATHER AND CLIMATOLOGY</h3>
               <div class="c_div_team-member-intro c_div_team-member-intro-long">
-                <p>Brian McNoldy is a Senior Research Associate at the University of Miami’s Rosenstiel School of Marine and Atmospheric Science (RSMAS)
+                <p>
+                  Brian is a senior research associate in the Department of Atmospheric Sciences and has been involved with tropical cyclone research for over two decades.
+                  Much of his work is focused on model simulations and model verification of tropical cyclones, but has also included topics such as satellite remote sensing,
+                  hurricane risk perception, and the economic value of improved hurricane forecasts.
                 </p>
+                <p>Brian is enthusiastic about communicating science with the general public.
+                  He has maintained a blog focused on tropical cyclone activity since 1996 for which the general public has always been the intended audience. In 2014 he co-founded
+                  a public outreach program on hurricanes at the Rosenstiel School and continues to mentor the graduate students who deliver the presentations.
+                </p>
+                <br>
               </div>
-              <div class="c_team-member-contact-associates">
+              <div class="c_team-member-contact">
                 <a href="mailto:bmcnoldy@miami.edu" class="c_team-icon-mail"></a>
                 <a href="https://twitter.com/BMcNoldy" class="c_team-icon-twitter"></a>
                 <a href="http://bmcnoldy.rsmas.miami.edu/" class="c_team-icon-website"></a>
@@ -167,24 +164,19 @@
           </section>
           <section class="c_article-allcontent c_section_team-students">
             <article class="c_article_team-member c_article_team-student">
-              <img class="c_img_team-member" alt="Carolina Diaz's headshot" src="assets/carolina.png"></img>
-              <h2>Carolina Diaz</h2>
-              <h3>GRADUATE RESEARCH ASSISTANT<br>MFA INTERACTIVE MEDIA</h3>
-            </article>
-            <article class="c_article_team-member c_article_team-student">
               <img class="c_img_team-member" alt="Qinyu Ding's's headshot" src="assets/qinyu.jpg"></img>
               <h2>Qinyu Ding</h2>
-              <h3>GRADUATE RESEARCH ASSISTANT<br>MFA INTERACTIVE MEDIA</h3>
+              <h3>RESEARCH ASSISTANT<br>MFA INTERACTIVE MEDIA</h3>
             </article>
             <article class="c_article_team-member c_article_team-student">
-              <img class="c_img_team-member" alt="Barbara Millet's headshot" src="assets/leigh.png"></img>
-              <h2>Leigh Rauk</h2>
-              <h3>GRADUATE RESEARCH ASSISTANT<br>PHD CANDIDATE<br>SCHOOL OF EDUCATION</h3>
+              <img class="c_img_team-member" alt="Carolina Diaz's headshot" src="assets/carolina.png"></img>
+              <h2>Carolina Diaz</h2>
+              <h3>RESEARCH ASSISTANT<br>MFA INTERACTIVE MEDIA</h3>
             </article>
             <article class="c_article_team-member c_article_team-student">
-              <img class="c_img_team-member" alt="AJ's headshot" src="assets/AJ.jpg"></img>
-              <h2>Alexzander James Hudson</h2>
-              <h3>GRADUATE RESEARCH ASSISTANT<br>PHD STUDENT<br>ABESS CENTER</h3>
+              <img class="c_img_team-member" alt="Catherine Ma's headshot" src="assets/catherine.jpg"></img>
+              <h2>Catherine Ma</h2>
+              <h3>GRADUATE RESEARCH ASSISTANT<br>PHD CANDIDATE<br>SCHOOL OF COMMUNICATION</h3>
             </article>
             <article class="c_article_team-member c_article_team-student">
               <img class="c_img_team-member" alt="Morgan Asmussen's headshot" src="assets/morgan.jpg"></img>
