--- a/publications.html
+++ b/publications.html
@@ -134,8 +134,7 @@
               visually communicating hurricane risks and potential threats.
             </p>
             <p class="c_pub-reference">
-              Majumdar, S. J., B. Millet, K. Broad, A. Cairo, S. Evans and B. D. McNoldy, 2020:
-              "Graphical Hurricane Risk Communication for Vulnerable Populations”.  34th Conference on Hurricanes
+              Majumdar, S. J., B. Millet, K. Broad, A. Cairo, S. Evans, B. McNoldy, (2020). Graphical Hurricane Risk Communication for Vulnerable Populations. 34th Conference on Hurricanes
               and Tropical Meteorology, American Meteorological Society, New Orleans, LA, May 10-15, 2020.
           </article>
           <!--conference -->
@@ -149,8 +148,8 @@
               This talk describes findings from our research about misinterpretations when using the National Hurricane Center’s “Cone of Uncertainty” graphic.
             </p>
             <p class="c_pub-reference">
-              Majumdar, S. J., B. Millet, K. Broad, A. Cairo, S. Evans and B. D. McNoldy, 2020: “Improving Hurricane Risk Communication for Vulnerable Populations”. Workshop on
-              Tropical Cyclones After Landfall: Impacts, Predictability and Forecasting, National Weather Center, Norman, OK, April 14-16, 2020.
+              Majumdar, S. J., B. Millet, K. Broad, A. Cairo and S. Evans, (2020). Improving Hurricane Risk Communication for Vulnerable Populations.
+              15th Symposium on Societal Applications: Policy, Research and Practice. American Meteorological Society Annual Meeting, Boston, MA, 13-16 January 2020.
             </p>
           </article>
       </section>
