Removed Catherine. Removed "for more info"

--- a/index.html
+++ b/index.html
@@ -104,8 +104,7 @@
         <article>
           <h3>U-LINK</h3>
           <p id="footer_u-link-content">This project is supported by University of Miami
-            Laboratory for Integrative Knowledge. For more information,
-            please visit <a id="footer_link" href="ulink.miami.edu">ulink.miami.edu</a>
+            Laboratory for Integrative Knowledge.
           </p>
         </article>
       </section>
