--- a/team.html
+++ b/team.html
@@ -174,11 +174,6 @@
               <h3>RESEARCH ASSISTANT<br>MFA INTERACTIVE MEDIA</h3>
             </article>
             <article class="c_article_team-member c_article_team-student">
-              <img class="c_img_team-member" alt="Catherine Ma's headshot" src="assets/catherine.jpg"></img>
-              <h2>Catherine Ma</h2>
-              <h3>GRADUATE RESEARCH ASSISTANT<br>PHD CANDIDATE<br>SCHOOL OF COMMUNICATION</h3>
-            </article>
-            <article class="c_article_team-member c_article_team-student">
               <img class="c_img_team-member" alt="Morgan Asmussen's headshot" src="assets/morgan.jpg"></img>
               <h2>Morgan Asmussen</h2>
               <h3>UNDERGRADUATE STUDENT<br>ROSENSTIEL SCHOOL OF MARINE AND ATMOSPHERIC SCIENCE</h3>
@@ -207,8 +202,7 @@
             <article>
               <h3>U-LINK</h3>
               <p id="footer_u-link-content">This project is supported by University of Miami
-                Laboratory for Integrative Knowledge. For more information,
-                please visit <a id="footer_link" href="ulink.miami.edu">ulink.miami.edu</a>
+                Laboratory for Integrative Knowledge.
               </p>
             </article>
           </section>
