--- a/publications.html
+++ b/publications.html
@@ -41,7 +41,24 @@
       </section>
       <section class="c_article-allcontent c_section_home-content">
           <h1 class="c_section-title">PUBLICATIONS</h1>
-          <!-- 1st journal -->
+          <!-- journal -->
+          <article>
+            <h2 class="c_pub-title">
+              <a>
+               Use of Visualization and Behavioral Science Concepts in Hurricane Forecast Communications
+              </a>
+            </h2>
+            <p>
+              This article provide a review framework for understanding hurricane risk communications and
+              emphasizes the need for more personalized hurricane risk information systems that take into account cultural,
+              geographical, linguistic, and economic circumstances. This short article appears in BAMS’ Paper of Note section.
+            </p>
+            <p class="c_pub-reference">
+              Millet, B., Carter, A., Broad, K., Cairo, A., Evans, S., & Majumdar, S. (2020). Use of Visualization and Behavioral Science Concepts in Hurricane Forecast Communications.
+              Paper of Note. Bulletin of the American Meteorological Society, 101 (1), 17-18.
+            </p>
+          </article>
+          <!--journal -->
           <article>
             <h2 class="c_pub-title">
               <a class="c_link-pub" href="https://journals.ametsoc.org/doi/abs/10.1175/WCAS-D-19-0011.1">
@@ -58,7 +75,7 @@
               Visualization and Behavioral Science Concepts. <em>Weather, Climate, and Society</em>, 12(2), 193–211.
             </p>
           </article>
-          <!-- 2nd journal -->
+          <!--journal -->
           <article>
             <h2 class="c_pub-title">
               <a class="c_link-pub" href="https://ieeexplore.ieee.org/document/9020215">
